--- a/ProductionInRS2/MainWindow.xaml
+++ b/ProductionInRS2/MainWindow.xaml
@@ -8,6 +8,12 @@
         mc:Ignorable="d"
         Title="Формирование отчета по производству рулона" Height="450" Width="800">
     <Grid>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.506,0.995" StartPoint="0.504,0.006">
+                <GradientStop Color="#FFF7EEB0" Offset="0"/>
+                <GradientStop Color="White" Offset="1"/>
+            </LinearGradientBrush>
+        </Grid.Background>
         <Grid x:Name="step1" Margin="10,10,673.5,298.5">
             <Ellipse x:Name="crcStep" HorizontalAlignment="Left" Height="80" Margin="8.5,11.5,0,0" StrokeThickness="2" VerticalAlignment="Top" Width="80">
                 <Ellipse.Effect>
@@ -68,7 +74,7 @@
 
 
         </Grid>
-        <Grid x:Name="step3_Copy" Margin="400,10,283.5,298.5">
+        <Grid x:Name="step4" Margin="400,10,283.5,298.5">
             <Ellipse x:Name="crcStep3" HorizontalAlignment="Left" Height="80" Margin="8.5,11.5,0,0" StrokeThickness="2" VerticalAlignment="Top" Width="80">
                 <Ellipse.Effect>
                     <DropShadowEffect ShadowDepth="15" BlurRadius="10"/>
@@ -88,6 +94,24 @@
 
 
         </Grid>
+        <ed:BlockArrow x:Name="btnForward" HorizontalAlignment="Left" Height="79.5" Margin="720,240,0,0" Orientation="Right" StrokeThickness="2" VerticalAlignment="Top" Width="62" MouseLeftButtonDown="BtnForward_MouseLeftButtonDown">
+            <ed:BlockArrow.Fill>
+                <LinearGradientBrush EndPoint="-0.012,0.5" StartPoint="0.988,0.5">
+                    <GradientStop Color="#FF22F3D0" Offset="0"/>
+                    <GradientStop Color="White" Offset="1"/>
+                    <GradientStop Color="#FF95A09E" Offset="0.665"/>
+                </LinearGradientBrush>
+            </ed:BlockArrow.Fill>
+        </ed:BlockArrow>
+        <ed:BlockArrow x:Name="btnBack" HorizontalAlignment="Left" Height="79.5" Margin="10,240,0,0" Orientation="Left" StrokeThickness="2" VerticalAlignment="Top" Width="65" MouseLeftButtonDown="BtnBack_MouseLeftButtonDown">
+            <ed:BlockArrow.Fill>
+                <LinearGradientBrush EndPoint="-0.012,0.5" StartPoint="0.988,0.5">
+                    <GradientStop Color="#FF13F5D0" Offset="0.991"/>
+                    <GradientStop Color="White"/>
+                    <GradientStop Color="#FF99A095" Offset="0.335"/>
+                </LinearGradientBrush>
+            </ed:BlockArrow.Fill>
+        </ed:BlockArrow>
 
 
 
